syntax = "proto3";

package fxp;

option go_package = "internal/fxprocessorproto";

service FXProcessor {
    rpc ProcessAudio (AudioRequest) returns (AudioRequest);
}

enum AudioEffect {
    DISTORTION = 0;
    REVERB = 1;
    DELAY = 2;
}

message AudioRequest {
    bytes audio = 1;
    AudioEffect effect = 2;
    map<string, float> params = 3;
}

message AudioResponse {
    bytes processed_audio = 1;
}